--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#homepage {
+  background-image: url("./assets/home-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1132px;
+  width: 100%;
+}
